# demand-retail-app

./: main.py  pyproject.toml
.streamlit/: config.toml
backend/: inference.py
backend/.ipynb_checkpoints/: inference-checkpoint.py
cloudformation/: ecs-fargate-app.yaml  rds-postgresql-cfn.yaml  sagemaker-cfn.yaml
data/gold/: predictions.csv
data/silver/: categories_catalog.parquet  items_catalog.parquet  shops_catalog.parquet
docs/: 1c_forecast_architecture.drawio  1c_forecast_erd.drawio  1c_forecast_erd_updated.drawio
frontend/: app.py
frontend/.ipynb_checkpoints/: app-checkpoint.py
src/inference/: Dockerfile  __main__.py  inference.py
src/preprocessing/: sm-processing-sales-byoc.ipynb
src/preprocessing/container/: Dockerfile  preprocess.py
src/rds_load/.ipynb_checkpoints/: rds_load-checkpoint.py
src/s3_load/: s3_load.py
src/s3_load/.ipynb_checkpoints/: s3_load-checkpoint.py
src/training/: Dockerfile  build_and_push.sh  sagemaker_demand_retail.ipynb
src/training/.ipynb_checkpoints/: sagemaker_demand_retail-checkpoint.ipynb
src/training/src/: predictor.py  train
src/training/src/utils/: config.py  features.py
