[project]
name = "demand-retail-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awswrangler>=3.16.0",
    "boto3>=1.42.97",
    "great-tables>=0.21.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "plotnine>=0.15.3",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
]
